tests/fsharp/typecheck/sigs/neg40.bsl

neg40.fs(3,3,3,12): parse error FS0010: Unexpected keyword 'namespace' in implementation file. Expected incomplete structured construct at or before this point or other token.

neg40.fs(7,1,7,1): parse error FS0010: Incomplete structured construct at or before this point in implementation file
