tests/fsharp/typecheck/sigs/neg40.fs
namespace Neg40a 
  type X = A | B
  namespace Neg40b

  type X = A | B

